hphp/hack/test/enum_class_label/typing/enum_class_wrong_place.php.exp
File "enum_class_wrong_place.php", line 4, characters 1-17:
Toplevel statements are not allowed. Use `__EntryPoint` attribute instead (Parsing[1002])
File "enum_class_wrong_place.php", line 9, characters 8-8:
This character is invalid. (Parsing[1002])
File "enum_class_wrong_place.php", line 9, characters 8-8:
Unbound name: `#` (a global constant) (Naming[2049])
File "enum_class_wrong_place.php", line 8, characters 8-28:
Enum class label/member mismatch (Typing[4110])
  File "enum_class_wrong_place.php", line 8, characters 8-28:
  Unexpected enum class label: `#label_alone_is_error`
File "enum_class_wrong_place.php", line 9, characters 8-8:
Unbound global constant (Typing) (Typing[4106])
